demo/federated/nginx-us.svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-us
  name: nginx-us
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 31315
    name: http
  selector:
    region: nginx-us
  type: NodePort
