demo/federated/nginx.svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 31315
    name: http
  selector:
    app: nginx
  type: LoadBalancer
