demo/federated/nginx.ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.global-static-ip-name: kubefed
  name: nginx
spec:
  backend:
    serviceName: nginx
    servicePort: 80
